syntax = "proto3";

package api.binance;

message GetBinanceMarketDepthRequest{
    string symbol = 1;
    int32 limit = 2;
}

message Asks{
    string Low = 1;
    string High = 2;
}

message Bids {
    string Low = 1;
    string High = 2;
}


message GetBinanceMarketDepthResponse{
    int32 lastUpdateId = 1;
    repeated Bids bids = 2;
    repeated Asks asks = 3;
}

message GetBinanceMarketTradesRecentRequest{
    string symbol = 1;
    int32 limit = 2;
}

message TradeInfo{
    int32 ID = 1;
    string price =2;
    string quantity = 3;
    string quoteQuantity = 4;
    int64 time = 5;
    bool isBuyerMake = 6;
    bool isBestMatch = 7;

}

message GetBinanceMarketTradesRecentResponse{
    repeated TradeInfo results = 1;
}

message GetBinanceMarketTradesHistoricalRequest{
    string symbol = 1;
    int32 limit = 2;
    int64 fromId = 3;
}

message GetBinanceMarketTradesHistoricalResponse{
    repeated TradeInfo results = 1;
}

service BinanceMarketData{
    rpc GetBinanceMarketDepth(GetBinanceMarketDepthRequest) returns (GetBinanceMarketDepthResponse){}
    rpc GetBinanceMarketTradesRecent(GetBinanceMarketTradesRecentRequest) returns (GetBinanceMarketTradesRecentResponse){}
    rpc GetBinanceMarketTradesHistorical(GetBinanceMarketTradesHistoricalRequest) returns (GetBinanceMarketTradesHistoricalResponse){}
}